--- a/main.html
+++ b/main.html
@@ -149,48 +149,12 @@ required>
         required
         >
     <select name="entry.matchlvl">
-        <option value="playoff">Playoff</option>
         <option value="qual">Qual</option>
         <option value="practice">Practice</option>
+        <option value="playoff">Playoff</option>
     </select>
 </fieldset><br>
-<h2>Match Scouting</h2><h4 style="color: #a9a9a9;">&emsp;Record as the game goes on</h4>
-<fieldset>
-<label>Do this section for the duration of the match, fill out the rest at the end.<br></label><br>
-Made Upper Hub shots:<br><input
-id="madeupper"
-type="text"
-value="0"
-name="madeupper"
-><br>
-<button onclick="incValueMadeUpper()" type="button"  style="width: 9rem; margin-top: 0.35rem; font-size: xx-large;">⟰</button><br>
-Missed Upper Hub shots:<br><input
-id="missedupper"
-type="text"
-value="0"
-name="missedupper"
-><br>
-<button onclick="incValueMissedUpper()" type="button"  style="width: 9rem; margin-top: 0.35rem; font-size: xx-large;">⟰</button><br>
-Made Lower Hub shots:<br><input
-id="madelower"
-type="text"
-value="0"
-name="madelower"
-><br>
-<button onclick="incValueMadeLower()" type="button"  style="width: 9rem; margin-top: 0.35rem; font-size: xx-large;">⟰</button><br>
-Missed Lower Hub shots:<br><input
-id="missedlower"
-type="text"
-value="0"
-name="missedlower"
-><br>
-<button onclick="incValueMissedLower()" type="button" style="width: 9rem; margin-top: 0.35rem; font-size: xx-large;">⟰</button><br>
-Bars climbed:<br>
-<select name="barsdone"><option value="none">No Bars</option><option value="low">Low Bar</option><option value="mid">Mid Bar</option><option value="high">High Bar</option><option value="trav">Traversal Bar</option></select><br>
-Bars attempted:<br>
-<select name="barsatt"><option value="none">No Bars</option><option value="low">Low Bar</option><option value="mid">Mid Bar</option><option value="high">High Bar</option><option value="trav">Traversal Bar</option></select>
-<br>
-</fieldset>
+<h2>Match Scouting</h2><h4 style="color: #a9a9a9;">&emsp;Do this section for the duration of the match, fill out the rest at the end.</h4>
 <fieldset>
     <label>Auton<br></label>
     <br>
@@ -198,32 +162,73 @@ Bars attempted:<br>
         placeholder="off"
         value="true"
         type="checkbox"
+        name="entry.1277030981"
+        class="checkbig"
+        >&emsp;During Auton, the robot taxied<br>
+    <input
+        placeholder="off"
+        value="true"
+        type="checkbox"
+        name="entry.984983966"
+        class="checkbig"
+        >&emsp;During Auton, the robot successfully shot cargo into the hubs<br>
+    <input
+        placeholder="off"
+        value="true"
+        type="checkbox"
+        name="entry.1220637130"
+        class="checkbig"
+        >&emsp;During Auton, the robot retrieved cargo from the field<br>
+    <input
+        placeholder="off"
+        value="true"
+        type="checkbox"
         name="entry.412041471"
+        class="checkbig"
         >&emsp;During Auton, the robot failed to score points, but made an attempt<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
-        name="entry.984983966"
-        >&emsp;During Auton, the robot successfully shoot cargo into the hubs<br>
-        <input
-        placeholder="off"
-        value="true"
-        type="checkbox"
-        name="entry.1220637130"
-        >&emsp;During Auton, the robot retrieved cargo from the field<br>
-        <input
-        placeholder="off"
-        value="true"
-        type="checkbox"
-        name="entry.1277030981"
-        >&emsp;During Auton, the robot taxied<br>
-        <input
-        placeholder="off"
-        value="true"
-        type="checkbox"
         name="entry.1277000981"
+        class="checkbig"
         >&emsp;During Auton, the robot failed to score points<br>
+</fieldset>
+<fieldset>
+<label style="font-size:1.5rem;">For Teleop ONLY:</label><br><br>
+Made Upper Hub shots:<br><input
+id="madeupper"
+type="text"
+value="0"
+name="madeupper"
+><br>
+<button onclick="incValueMadeUpper()" type="button"  style="width: 100%; height: 5rem; margin-top: 0.35rem; font-size: xx-large;">⟰</button><br>
+Missed Upper Hub shots:<br><input
+id="missedupper"
+type="text"
+value="0"
+name="missedupper"
+><br>
+<button onclick="incValueMissedUpper()" type="button"  style="width: 100%; height: 5rem; margin-top: 0.35rem; font-size: xx-large;">⟰</button><br>
+Made Lower Hub shots:<br><input
+id="madelower"
+type="text"
+value="0"
+name="madelower"
+><br>
+<button onclick="incValueMadeLower()" type="button"  style="width: 100%; height: 5rem; margin-top: 0.35rem; font-size: xx-large;">⟰</button><br>
+Missed Lower Hub shots:<br><input
+id="missedlower"
+type="text"
+value="0"
+name="missedlower"
+><br>
+<button onclick="incValueMissedLower()" type="button" style="width: 100%; height: 5rem; margin-top: 0.35rem; font-size: xx-large;">⟰</button><br>
+Bars climbed:<br>
+<select name="barsdone"><option value="none">No Bars</option><option value="low">Low Bar</option><option value="mid">Mid Bar</option><option value="high">High Bar</option><option value="trav">Traversal Bar</option></select><br>
+Bars attempted:<br>
+<select name="barsatt"><option value="none">No Bars</option><option value="low">Low Bar</option><option value="mid">Mid Bar</option><option value="high">High Bar</option><option value="trav">Traversal Bar</option></select>
+<br>
 </fieldset>
 
     <input
@@ -239,6 +244,7 @@ Bars attempted:<br>
     value="true"
     type="checkbox"
     name="entry.1080933142"
+    class="checkbig"
     >&emsp;The Human Player interacts with the robot<br>
 </fieldset>
 <br>
@@ -256,24 +262,27 @@ Bars attempted:<br>
 </fieldset>
 <fieldset>
     <label for="Any other thoughts about the teleop phase? Actions it took during so?">Any other thoughts about the teleop phase? Actions it took during so?<br></label>
-    <textarea rows="2" cols="35" name="entry.711121407" placeholder="No" style="font-size: x-large !important;"></textarea>
+    <textarea rows="2" cols="35" name="entry.711121407" placeholder="No"></textarea>
 </fieldset>
 <fieldset>
     <label for="If present, what types of defense was used, and was it effective?">Did the robot play defense? If so, what did they do?<br></label>
-    <textarea rows="2" cols="35" name="entry.309796794" placeholder="No" style="font-size: x-large s!important;"></textarea>
+    <textarea rows="2" cols="35" name="entry.309796794" placeholder="No"></textarea>
 </fieldset>
 <fieldset>
     <label for="Any thoughts about the driving?">Any thoughts about the driving?<br></label>
-    <textarea rows="2" cols="35" name="entry.177753238" placeholder="No" style="font-size: x-large !important;"></textarea>
+    <textarea rows="2" cols="35" name="entry.177753238" placeholder="No"></textarea>
 </fieldset>
 <fieldset>
     <label for="Overall assessment? (Would we want to be in an alliance with them?)">Overall assessment? (Would we want to be in an alliance with them?)<br></label>
-    <textarea rows="4" cols="50" name="entry.1013139442" placeholder="Team is pretty mid..." style="font-size: x-large !important;"></textarea>
+    <textarea rows="4" cols="50" name="entry.1013139442" placeholder="Team is pretty mid..."></textarea>
 </fieldset>
 <br>
 <p style="text-align:center">
 <input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">   
-<input type="reset" value="Reset Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">   
+<input type="reset" value="Reset Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">
+<a href="index.html">
+   <input type="button" value="Back" style="color: white; background-color: #E90202; border-radius: 1rem; border-style: solid; border-color: #E90202; border-width: 1rem;" />
+</a>
 </p>
 <p style="font-size:x-small">This site is built for mobile devices. Version 2.0.0 - ©2022 Jayen Agrawal, available under the MIT license. RAPID REACT℠ is a trademark of For Inspiration and
     Recognition of Science and Technology (FIRST). ©2021 FIRST. All rights reserved. Used with non-exclusive permission.</p>
