fixed validator's warning about table

--- a/pit.html
+++ b/pit.html
@@ -162,7 +162,7 @@ required>
 <fieldset>
     <label><strong>Overconfidence</strong></label><br>
     <table style="text-align:center;">
-        <tr><td rowspan="3">Humble&emsp;</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td rowspan="3">&emsp;Cocky</td></tr>
+        <tr><td rowspan="3">Humble&emsp;</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td rowspan="3">&emsp;Cocky</td></tr>
     <tr><td></td><td><input type="radio" name="overconf" value="1" class="checkbig"></td>
     <td><input type="radio" name="overconf" value="2" class="checkbig"></td>
     <td><input type="radio" name="overconf" value="3" class="checkbig"></td>
@@ -174,7 +174,7 @@ required>
     </table></fieldset><fieldset>
     <label><strong>Build Quality</strong></label><br>
     <table style="text-align:center;">
-        <tr><td rowspan="3">Hot Glue&emsp;</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td rowspan="3">&emsp;Apple, Inc</td></tr>
+        <tr><td rowspan="3">Hot Glue&emsp;</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td rowspan="3">&emsp;Apple, Inc</td></tr>
     <tr><td></td><td><input type="radio" name="bqual" value="1" class="checkbig"></td>
     <td><input type="radio" name="bqual" value="2" class="checkbig"></td>
     <td><input type="radio" name="bqual" value="3" class="checkbig"></td>
