--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<title>RAPID REACT Scouting</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="main.css" type="text/css">
 <style>
