--- a/main.html
+++ b/main.html
@@ -195,7 +195,7 @@ required>
 <label style="font-size:1.5rem;">For Teleop ONLY:</label><br><br>
 Made Upper Hub shots: <input
 id="madeupper"
-type="text"
+type="number"
 value="0"
 name="madeupper"
 class="incnum"
@@ -203,7 +203,7 @@ class="incnum"
 <button onclick="incValueMadeUpper()" type="button"  style="width: 100%; height: 5rem; margin-top: 0.35rem; font-size: xx-large;">⟰</button><br><br>
 Missed Upper Hub shots: <input
 id="missedupper"
-type="text"
+type="number"
 value="0"
 name="missedupper"
 class="incnum"
@@ -211,7 +211,7 @@ class="incnum"
 <button onclick="incValueMissedUpper()" type="button"  style="width: 100%; height: 5rem; margin-top: 0.35rem; font-size: xx-large;">⟰</button><br><br>
 Made Lower Hub shots: <input
 id="madelower"
-type="text"
+type="number"
 value="0"
 name="madelower"
 class="incnum"
@@ -219,7 +219,7 @@ class="incnum"
 <button onclick="incValueMadeLower()" type="button"  style="width: 100%; height: 5rem; margin-top: 0.35rem; font-size: xx-large;">⟰</button><br><br>
 Missed Lower Hub shots: <input
 id="missedlower"
-type="text"
+type="number"
 value="0"
 name="missedlower"
 class="incnum"
