tel instead of number

--- a/pit.html
+++ b/pit.html
@@ -68,7 +68,7 @@ required>
 <label>Number of the Team you are Scouting <span style="color:red">*</span><br></label>
 <input
     placeholder="766"
-    type="number"
+    type="tel"
     name="entry.1638702746"
     required>
 </fieldset>
@@ -86,7 +86,7 @@ required>
     <label>How much cargo can the robot hold at a time?<br></label>
     <input
         placeholder="1 or 2"
-        type="number"
+        type="tel"
         name="entry.1565854744"
         >
 </fieldset>
