Scaled text, remove subheading

--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <html lang="en">
 <head>
 <title>RAPID REACT Scouting</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <link rel="stylesheet" href="main.css" type="text/css">
 <style>
 a {
     border: #515151;
-    border-width: 0.55rem;
+    border-width: 1%;
     border-style: solid;
-    border-radius: 1rem;
-    margin-top: 0.25rem;
-    margin-bottom: 0.25rem;
-    padding-right: 7rem;
-    padding-left: 7rem;
+    border-radius: 5rem;
+    padding-right: 10%;
+    padding-left: 10%;
     background-color: #515151;
     color: white;
     text-align: center;
     text-decoration: none;
-    font-size: x-large;
+    font-size: 6vh;
 }
 body {
     text-align: center;
@@ -29,8 +28,7 @@ body {
 <div class="container">
 <form 
 >
-<h1 style="font-size: xx-large;">2022 Scouting: RAPID REACT℠</h1>
-<h3>The forms have been split. Select one below.</h3><br>
+<h1 style="font-size: 6.5vh;">2022 Scouting: RAPID REACT℠</h1><br>
 <a href="pit.html">
     Pit Form<br>
 </a><br>
@@ -40,8 +38,6 @@ body {
 <br>
 <p style="text-align:center; display:none;">
 </p>
-<p style="font-size:x-small">This site is built for mobile devices. Version 2.0.0 - ©2022 Jayen Agrawal, available under the MIT license. RAPID REACT℠ is a trademark of For Inspiration and
-    Recognition of Science and Technology (FIRST). ©2021 FIRST. All rights reserved. Used with non-exclusive permission.</p>
 </form>
 <br><br>
     </div>
