Scaling text, shorter list responses

--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="main.css" type="text/css">
 <title>RAPID REACT Match Scouting</title>
 </head>
@@ -255,10 +256,10 @@ Bars attempted:<br>
     <select
     name="entry.1152778382"
     >
-    <option value="Their performance seems promising and consistent">Their performance seems promising and consistent</option>
-    <option value="Their performance seems somewhat consistent">Their performance seems somewhat consistent</option>
-    <option value="Their performance may change across different trials">Their performance may change across different trials</option>
-    <option value="Their performance will probably be different next time">Their performance will probably be different next time</option>
+    <option value="Their performance seems promising and consistent">Consistent</option>
+    <option value="Their performance seems somewhat consistent">Somewhat consistent</option>
+    <option value="Their performance may change across different trials">Somewhat inconsistent</option>
+    <option value="Their performance will probably be different next time">Inconsistent</option>
 </select>
 </fieldset>
 <fieldset>
@@ -274,16 +275,15 @@ Bars attempted:<br>
     <textarea rows="2" cols="35" name="entry.177753238" placeholder="No"></textarea>
 </fieldset>
 <fieldset>
-    <label>Overall assessment (Alliance partner?)<br></label>
+    <label>Overall assessment? Alliance partner?)<br></label>
     <textarea rows="4" cols="35" name="entry.1013139442" placeholder="Team is pretty mid..."></textarea>
 </fieldset>
 <br>
 <p style="text-align:center">
 <input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">   
-<input type="reset" value="Reset Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">
+<input type="reset" value="Reset Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;"><br>
 <a href="index.html" style="color: white; background-color: #E90202; border-radius: 1rem; border-style: solid; border-color: #E90202; border-width: 1rem;">Back</a>
 </p>
-<p style="font-size:x-small">This site is built for mobile devices. Version 2.0.0 - ©2022 Jayen Agrawal. FIRST®, FIRST® Robotics Competition, and RAPID REACT are registered trademarks of FIRST®</p>
 </form>
 <br><br>
     <script src="form.js"></script>
