--- a/main.html
+++ b/main.html
@@ -100,7 +100,7 @@ hidden
 <!--END OVERRIDES-->
 <h1>2022 Scouting: RAPID REACT℠</h1>
 <br>
-<h2>Pre-Match:</h2><h4 style="color: #a9a9a9;">&emsp;Get this done <b>before</b> the match starts!</h4>
+<h2>Pre-Match:</h2><h4 style="color: #a9a9a9;">Get this done <b>before</b> the match starts!</h4>
 <!--<fieldset>
 <label for="Form Key">Form Key&emsp;<span style="color:gray;">If this is not entered correctly, the server will reject your entire response</span><br></label>
 <input
@@ -158,43 +158,43 @@ required>
         <option value="semifinal">Semifinal</option>
     </select>
 </fieldset><br>
-<h2>Match Scouting</h2><h4 style="color: #a9a9a9;">&emsp;Do this section for the duration of the match, fill out the rest at the end.</h4>
+<h2>Match Scouting</h2><h4 style="color: #a9a9a9;">Do this section for the duration of the match, fill out the rest at the end.</h4>
 <fieldset>
-    <label>Auton<br></label>
+    <label style="font-size: 8vw">Auton<br></label>
     <br>
     <input
         value="true"
         type="checkbox"
         name="entry.1277030981"
         class="checkbig"
-        >&emsp;During Auton, the robot taxied<br>
+        ><span style="font-size: 5vw">&emsp;During Auton, the robot taxied<br></span><br>
     <input
         value="true"
         type="checkbox"
         name="entry.984983966"
         class="checkbig"
-        >&emsp;During Auton, the robot successfully shot cargo into the hubs<br>
+        ><span style="font-size: 5vw">&emsp;During Auton, the robot successfully shot cargo into the hubs<br></span><br>
     <input
         value="true"
         type="checkbox"
         name="entry.1220637130"
         class="checkbig"
-        >&emsp;During Auton, the robot retrieved cargo from the field<br>
+        ><span style="font-size: 5vw">&emsp;During Auton, the robot retrieved cargo from the field<br></span><br>
     <input
         value="true"
         type="checkbox"
         name="entry.412041471"
         class="checkbig"
-        >&emsp;During Auton, the robot failed to score points, but made an attempt<br>
+        ><span style="font-size: 5vw">&emsp;During Auton, the robot failed to score points, but made an attempt<br></span><br>
         <input
         value="true"
         type="checkbox"
         name="entry.1277000981"
         class="checkbig"
-        >&emsp;During Auton, the robot failed to score points<br>
+        ><span style="font-size: 5vw">&emsp;During Auton, the robot failed to score points</span><br>
 </fieldset>
 <fieldset>
-<label style="font-size:1.5rem;">For Teleop ONLY:</label><br><br>
+<label style="font-size: 8vw;">For Teleop ONLY:</label><br><br>
 Made Upper Hub shots: <input
 id="madeupper"
 type="number"
@@ -247,10 +247,10 @@ Bars attempted:<br>
     type="checkbox"
     name="entry.1080933142"
     class="checkbig"
-    >&emsp;The Human Player interacts with the robot<br>
+    ><span style="font-size: 5vw">&emsp;The Human Player interacts with the robot</span><br>
 </fieldset>
 <br>
-<h2>Post Game</h2><h4 style="color: gray;">&emsp;Fill this out after the game. Watch the game closely, and take note of important events.</h4>
+<h2>Post Game</h2><h4 style="color: gray;">Fill this out after the game. Watch the game closely, and take note of important events.</h4>
 <fieldset>
     <label>Does the team seem consistent in auton?</label><br>
     <select
@@ -263,25 +263,25 @@ Bars attempted:<br>
 </select>
 </fieldset>
 <fieldset>
-    <label>Any other thoughts about the teleop phase? Actions it took during so?<br></label>
+    <label>Any other thoughts about the teleop phase? Actions it took during so?<br><br></label>
     <textarea rows="2" cols="35" name="entry.711121407" placeholder="No"></textarea>
 </fieldset>
 <fieldset>
-    <label>Did the robot play defense? If so, what did they do?<br></label>
+    <label>Did the robot play defense? If so, what did they do?<br><br></label>
     <textarea rows="2" cols="35" name="entry.309796794" placeholder="No"></textarea>
 </fieldset>
 <fieldset>
-    <label>Any thoughts about the driving?<br></label>
+    <label>Any thoughts about the driving?<br><br></label>
     <textarea rows="2" cols="35" name="entry.177753238" placeholder="No"></textarea>
 </fieldset>
 <fieldset>
-    <label>Overall assessment? Alliance partner?)<br></label>
+    <label>Overall assessment? Alliance partner?)<br><br></label>
     <textarea rows="4" cols="35" name="entry.1013139442" placeholder="Team is pretty mid..."></textarea>
 </fieldset>
 <br>
 <p style="text-align:center">
-<input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">   
-<input type="reset" value="Reset Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;"><br>
+<input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;"><br><br>
+<input type="reset" value="Reset Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;"><br><br><br>
 <a href="index.html" style="color: white; background-color: #E90202; border-radius: 1rem; border-style: solid; border-color: #E90202; border-width: 1rem;">Back</a>
 </p>
 </form>
