rename pit form names

--- a/pit.html
+++ b/pit.html
@@ -66,7 +66,7 @@ hidden
 <input
 placeholder="Amon Gus"
 type="text"
-name="entry.398176575"
+name="name"
 required>
 </fieldset>
 
@@ -75,7 +75,7 @@ required>
 <input
     placeholder="766"
     type="tel"
-    name="entry.1638702746"
+    name="teamnum"
     required>
 </fieldset>
 
@@ -84,7 +84,7 @@ required>
 <input
     placeholder="Bears"
     type="text"
-    name="entry.215295328"
+    name="teamnam"
     >
 </fieldset>
 <h2>Pit Scouting</h2><h4 style="color: #a9a9a9;">&emsp;If you don't know the answer, just ask the team themselves</h4>
@@ -93,20 +93,12 @@ required>
     <input
         placeholder="1 or 2"
         type="tel"
-        name="entry.1565854744"
+        name="game-question-1"
         >
 </fieldset>
-<!--<fieldset>
-    <label for="How much does the robot weight?">How much does the robot weigh?<br></label>
-    <input
-        placeholder="150"
-        type="number"
-        name="entry.177680938"
-        > lbs
-</fieldset>-->
 <fieldset>
     <label>Drive Type<br></label>
-    <select name="entry.drivetype">
+    <select name="drivetype">
         <option value="westcoast">Westcoast (Like Ours)</option>
         <option value="swerve">Swerve (Each wheel turns)</option>
         <option value="other">Other (Explain in overall)</option>
@@ -115,15 +107,15 @@ required>
 <fieldset>
     <label>Experience<br></label>
     <input
-    placeholder="-5"
+    placeholder="10 wks"
     type="text"
-    name="dteam"
+    name="driveteam"
     > Weeks of drive team work<br>
     <input
-    placeholder="1"
+    placeholder="0 or 1"
     type="text"
-    name="entry.attended"
-    > Number of attended events
+    name="attended"
+    > Number of attended onseason events
 </fieldset>
 <fieldset>
     <label>Robot Capabilities<br></label>
@@ -131,37 +123,37 @@ required>
     <input
         value="true"
         type="checkbox"
-        name="entry.321248479"
+        name="game-question-2"
         class="checkbig"
         >&emsp;The robot can score in the Upper Hub<br>
         <input
         value="true"
         type="checkbox"
-        name="entry.1745221229"
+        name="game-question-3"
         class="checkbig"
         >&emsp;The robot can score in the Lower Hub<br>
         <input
         value="true"
         type="checkbox"
-        name="entry.189327560"
+        name="game-question-4"
         class="checkbig"
         >&emsp;The robot can climb to the Low Rung<br>
         <input
         value="true"
         type="checkbox"
-        name="entry.51519363"
+        name="game-question-5"
         class="checkbig"
         >&emsp;The robot can climb to the Mid Rung<br>
         <input
         value="true"
         type="checkbox"
-        name="entry.1343844870"
+        name="game-question-6"
         class="checkbig"
         >&emsp;The robot can climb to the High Rung<br>
         <input
         value="true"
         type="checkbox"
-        name="entry.332731239"
+        name="game-question-7"
         class="checkbig"
         >&emsp;The robot can climb to the Traversal Rung<br>
 </fieldset>
